[package]
name = "ai_informant"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "env"] }
rs_openai = { version = "0.5.0" }
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }
